--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   	<link href="https://fonts.googleapis.com/css?family=Nunito+Sans&display=swap" rel="stylesheet">
   	<link href='style.css' rel='stylesheet'>
     <meta charset="utf-8">
-    <title>MyCrazyProduct</title>
+    <title>MyCrazySwissProduct</title>
   	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
   </head>
   <body>
